# svarog-algebra

./: Cargo.toml
cl-playground/: Cargo.toml  README.md
cl-playground/src/: lib.rs  main.rs
classgroup/: Cargo.toml  README.md
classgroup/src/: lib.rs  main.rs  modulo_sqrt.rs
classgroup/src/cl_elgamal/: crypto.rs  delta1024.rs  delta1280.rs  delta1792.rs  delta1827.rs  discriminant_1827bit.rs  mod.rs  tests.rs
classgroup/src/generator_utils/: _tonelli_shanks_0.rs  crt.rs  mod.rs  modulo_sqrt.rs
classgroup/src/naf/: mod.rs
classgroup/src/quadform/: arithmetic.rs  check_test_cases.py  discriminant_1827bit.rs  mod.rs  tests.rs  tr_discriminant.rs
classgroup/src/tests/: mod.rs  test_cl_elgamal.rs  test_crt.rs  test_modulo_sqrt.rs  test_naf.rs  test_quadform.rs
classgroup/tests/: test_cl_elgamal.rs  test_crt.rs  test_modulo_sqrt.rs  test_quadform.rs
curve-abstract/: Cargo.toml
curve-abstract/src/: lib.rs
rug-1.27.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  RELEASES.md  build.rs
rug-1.27.0/etc/: appveyor.yml  coverage.sh  extract-doc-tests.sh  gitlab-ci.yml  invoke-tarpaulin.sh  test.sh  tidy.sh
rug-1.27.0/src/: lib.rs  macros.rs  misc.rs  ops.rs  ops_prim.rs  rand.rs  serdeize.rs
rug-1.27.0/src/complex/: arith.rs  big.rs  borrow.rs  cmp.rs  impl_num_traits.rs  mini.rs  mod.rs  ord.rs  serde.rs  small.rs  tests.rs  traits.rs
rug-1.27.0/src/ext/: mod.rs  xmpc.rs  xmpfr.rs  xmpq.rs  xmpz.rs  xmpz32.rs  xmpz64.rs
rug-1.27.0/src/float/: arith.rs  big.rs  borrow.rs  casts.rs  cmp.rs  impl_num_traits.rs  mini.rs  mod.rs  ord.rs  serde.rs  small.rs  tests.rs  traits.rs
rug-1.27.0/src/integer/: arith.rs  big.rs  borrow.rs  casts.rs  cmp.rs  division.rs  impl_num_traits.rs  long64.rs  mini.rs  mod.rs  serde.rs  small.rs  tests.rs  traits.rs
rug-1.27.0/src/rational/: arith.rs  (+11 more)
secp256k1-sys/: .cargo_vcs_info.json  Cargo.toml  build.rs
secp256k1-sys/src/: lib.rs  macros.rs  recovery.rs  types.rs
svarog-curve25519/: Cargo.toml
svarog-curve25519/src/: curve.rs  lib.rs  point.rs  scalar.rs  tests.rs
svarog-secp256k1/: Cargo.toml
svarog-secp256k1/src/: constants.rs  context.rs  curve.rs  lib.rs  point.rs  scalar.rs  tests.rs
(+6 files in other folders)
