[package]
name = "classgroup"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cl_playground"
required_features = ["tqdm"]

[dependencies]
anyhow = "1.0.99"
indicatif = { version = "0.18.0", optional = true }
once_cell = "1.21.3"
rand = "*"
rug = { version = "1.28.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-pickle = "1.2.0"

# The cargo will try to use THIS dependency
# EVERYWHERE in the dependency tree, if possible.
# You can run `cargo tree -f "{p} {f}"` to check this out.
[dependencies.gmp-mpfr-sys]
version = "*"
features = ["force-cross"]

[features]
default = []
tqdm = ["dep:indicatif"]
