[package]
name = "svarog-curve25519"
version = "0.1.0"
edition = "2024"

[dependencies]
curve-abstract = { path = "../curve-abstract" }
curve25519-dalek = { version = "4", features = ["rand_core", "digest", "serde", "group"] }
group = "0.13"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.20.0"
serde_cbor = "0.11.2"